@@ -44,9 +44,9 @@ is_deeply(
       'current_transactions'      => '36',
       'pending_normal_aio_reads'  => '0',
       'pending_normal_aio_writes' => '0',
-      'pending_ibuf_aio_reads'    => '0',
-      'pending_aio_log_ios'       => '0',
-      'pending_aio_sync_ios'      => '0',
+      'pending_ibuf_aio_reads'    => '1',
+      'pending_aio_log_ios'       => '2',
+      'pending_aio_sync_ios'      => '3',
       'pending_log_flushes'       => '0',
       'pending_buf_pool_flushes'  => '0',
       'file_reads'                => '5985113',
@@ -84,6 +84,14 @@ is_deeply(
       'ibuf_used_cells'           => '1',
       'ibuf_free_cells'           => '4634',
       'ibuf_cell_count'           => '4636',
+      'adaptive_hash_memory'      => '1538240664',
+      'page_hash_memory'          => '11688584',
+      'dictionary_cache_memory'   => '145525560',
+      'file_system_memory'        => '313848',
+      'lock_system_memory'        => '29232616',
+      'recovery_system_memory'    => '1',
+      'thread_hash_memory'        => '409336',
+      'innodb_io_pattern_memory'  => '1',
    ),
    'samples/innodb-001.txt'
 );
@@ -140,6 +148,13 @@ is_deeply(
       'ibuf_used_cells'           => '10204',
       'ibuf_free_cells'           => '157151',
       'ibuf_cell_count'           => '167356',
+      'adaptive_hash_memory'      => '1654507416',
+      'page_hash_memory'          => '28688008',
+      'dictionary_cache_memory'   => '116312344',
+      'file_system_memory'        => '172560',
+      'lock_system_memory'        => '71719560',
+      'recovery_system_memory'    => '0',
+      'thread_hash_memory'        => '407576',
    ),
    'samples/innodb-002.txt'
 );
@@ -161,6 +176,9 @@ is_deeply(
       'innodb_lock_structs'       => '5',
       'pending_normal_aio_reads'  => '0',
       'pending_normal_aio_writes' => '0',
+      'pending_ibuf_aio_reads'    => '0',
+      'pending_aio_log_ios'       => '0',
+      'pending_aio_sync_ios'      => '0',
       'pending_log_flushes'       => '0',
       'pending_buf_pool_flushes'  => '0',
       'file_reads'                => '42',
@@ -199,6 +217,13 @@ is_deeply(
       'ibuf_used_cells'           => '1',
       'ibuf_free_cells'           => '0',
       'ibuf_cell_count'           => '2',
+      'adaptive_hash_memory'      => NULL,
+      'page_hash_memory'          => NULL,
+      'dictionary_cache_memory'   => NULL,
+      'file_system_memory'        => NULL,
+      'lock_system_memory'        => NULL,
+      'recovery_system_memory'    => NULL,
+      'thread_hash_memory'        => NULL,
    ),
    'samples/innodb-006.txt'
 );
@@ -211,6 +236,9 @@ is_deeply(
       'os_waits'                  => '32601',
       'pending_normal_aio_reads'  => '0',
       'pending_normal_aio_writes' => '0',
+      'pending_ibuf_aio_reads'    => '0',
+      'pending_aio_log_ios'       => '0',
+      'pending_aio_sync_ios'      => '0',
       'pending_log_flushes'       => '0',
       'pending_buf_pool_flushes'  => '0',
       'file_reads'                => '1516536',
@@ -251,6 +279,15 @@ is_deeply(
       'active_transactions'       => '21',
       'unflushed_log'             => '0',
       'uncheckpointed_bytes'      => '286526394',
+      'read_views'                => NULL,
+      'history_list'              => NULL,
+      'adaptive_hash_memory'      => NULL,
+      'page_hash_memory'          => NULL,
+      'dictionary_cache_memory'   => NULL,
+      'file_system_memory'        => NULL,
+      'lock_system_memory'        => NULL,
+      'recovery_system_memory'    => NULL,
+      'thread_hash_memory'        => NULL,
    ),
    'samples/innodb-009.txt'
 );
