@@ -1,11 +1,15 @@
 Changes for templates:
 
 	* Changed SSH options so host keys are accepted automatically (issue 68).
+	* Parsing of the pending_ibuf_aio_reads property was broken.
+	* Parsing of the pending_aio_log_ios property was broken.
+	* Parsing of the pending_aio_sync_ios property was broken.
 	* Added a debugging log for ss_get_mysql_stats.php (issue 54).
 	* Added the --lint_check option to make-template.pl (issue 80).
 	* Removed the use of GET_LOCK() and changed to flock() instead (issue 78).
 	* The template and script version is now recorded in a GPRINT (issue 79).
 	* Restored unflushed_log, which was accidentally deleted in 1.1.3.
+	* Added the InnoDB Internal Hash Memory Usage graph (issue 75).
 	* Added the InnoDB Checkpoint Age graph (issue 73).
 	* Added the InnoDB Insert Buffer Usage graph (issue 74).
 	* Added the InnoDB Active/Locked Transactions graph.
